--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,8 @@
 tasks:
   - before: export SERVICE_URL=$(gp url 3001) && export APP_URL=$(gp url 3000)
     init: npm install && gp sync-done install
-  - command: gp sync-done install && npm run service
-  - command: gp sync-done install && npm run app
+  - command: gp sync-await install && npm run service
+  - command: gp sync-await install && npm run app
 
 ports:
   - port: 3001
